Nested relevant sections in ModelRun JSON

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,6 +469,7 @@
     "        firstVal = True\n",
     "        for opt in l.di['options']:\n",
     "            try:\n",
+    "                \n",
     "                if(index+opt < 0):\n",
     "                    raise Exception(\"Can only get values of positive indices\")\n",
     "\n",
@@ -476,10 +477,10 @@
     "\n",
     "                if(value == \"\"):\n",
     "                    value = \"XX\"\n",
-    "\n",
+    "                \n",
     "                if(isinstance(value, float)):\n",
     "                    if(value.is_integer()):\n",
-    "                        value = int(value)\n",
+    "                        value = str(int(value)).zfill(3)\n",
     "\n",
     "                if not firstVal:\n",
     "                    labelVal += \"_\"\n",
@@ -494,9 +495,10 @@
     "    def _update_change(self, change):\n",
     "        self.li = []\n",
     "        for index, l in enumerate(self.widgets):\n",
+    "            self.li.append(l.di)\n",
     "            if(l.widget_name==\"DerivedText\"):\n",
     "                l.widget_only.value = self._update_label(index, l)\n",
-    "            self.li.append(l.di)\n",
+    "            \n",
     "    \n",
     "    def _layout(self):\n",
     "        self._update_change(\"value\")\n",
@@ -505,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -696,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -728,7 +730,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08e76f95c4b64041bc2a975dabd71623",
+       "model_id": "226dbd77d0ef41499735349f3b21f6ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -742,7 +744,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83dfa69371564fd1bef96f7fd68fed4a",
+       "model_id": "96c7d0478e124c7c951b6700f12f8dcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -756,7 +758,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6eadc4530de4c0195e977f892906f63",
+       "model_id": "4469d2c6eb4046a7a6b35492f463fcae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -770,7 +772,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72307e642b204de38cc6760c675e1274",
+       "model_id": "5464f607355e436a8c0c67beb0b902ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,7 +786,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02fe9a4012d746a7bb0246ba4afeb48d",
+       "model_id": "3df4ec1fe1d649e894d0203cea08c9d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -798,7 +800,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e33d7d32b84a463ab562aa8b411231d8",
+       "model_id": "2e4a33fd418a4e319d0789c3d8b9198f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -812,7 +814,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67117dcd8aa84e07b572d137a6a2e4f5",
+       "model_id": "c97c99104c2d4c859c9cad5bee9d416c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -826,7 +828,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5400effa6894cf7be2571ca676a52d7",
+       "model_id": "59903a3b0dfa4b42a8c934325c440fb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -840,7 +842,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39627b565f2c43bba6f0ceafdb2f9582",
+       "model_id": "21f9b95285a44a02beee26e343fed4a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -900,7 +902,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea39209537784afcabcd6fe66f321052",
+       "model_id": "7ed1d3896a37490b82bfb591fa9ef143",
        "version_major": 2,
        "version_minor": 0
       },
@@ -914,7 +916,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c4f53eb0f8419c9c3a4dcbc381de30",
+       "model_id": "e6d927749c594418b50db8dda338e7fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -928,7 +930,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30f1b010e12446c69cbb497cd81a54e4",
+       "model_id": "1ce36f7860b74a38a920621afcbdb888",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,7 +944,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a3df7bdc2c9478583ea45ae791d9315",
+       "model_id": "078b8bc4ad9a4086b9628cc7700cea7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -956,7 +958,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bece09ba3c94f438b0f76dac4f69122",
+       "model_id": "a56d6094475f4db894f9727ddf40c35b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -970,7 +972,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e94115245ebe4384b5a0999960b7718b",
+       "model_id": "3f06488c942d43efb109f44f23be5004",
        "version_major": 2,
        "version_minor": 0
       },
@@ -984,7 +986,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10d91b2531a7410e9b40d2b5cff1d136",
+       "model_id": "3c9f39278b244aabb75a53cb1792b0a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -998,7 +1000,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6469909b14844b64aa3acdacd9e49030",
+       "model_id": "6d98b7392cb8460190935e49ade31c44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1012,7 +1014,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1491ef053124ec8b113ff0bafac46ad",
+       "model_id": "4842c94b6040456f81862ec229460955",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1026,7 +1028,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65429e86da0a4807a333166c62f9ecde",
+       "model_id": "11d7967ca2ee4ae1b6ba4cf4a060b184",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1040,7 +1042,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "356614a4b5074574871c32ff3119ce44",
+       "model_id": "80a5fc35e63d4b35ae03237162d6f461",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1100,7 +1102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "874c95072f4a4b90a397a0cb3831eb96",
+       "model_id": "4a2fa4f04cd4458eba80af20dfb38c51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1114,7 +1116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce21414ebd6947b6b73d364d0693de32",
+       "model_id": "8c1c3934eb5f48a4b454b8ee52037c12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1128,7 +1130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d108f80586c94a28977b2e5db99a7982",
+       "model_id": "1ca2821ab7954ed0a21502aaa694f455",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1188,7 +1190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69c81c21fd7640edb7531836d1166d2c",
+       "model_id": "700414c84a34409a8dd6a1f1ed4a6bf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1202,7 +1204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cb7f48a2ac94dbba5ce5b27828f587f",
+       "model_id": "ea8ff1c9e11146d195afcb692f115332",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1216,7 +1218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03b240578da046c18b28dc6c3b574782",
+       "model_id": "04944e57ea2843749233fdcd9636b01a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1276,7 +1278,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75f39093b44f41f392e971a95a3cc4c9",
+       "model_id": "e966dbd70a114cfc9daef3a894a34bf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1290,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fd2dfb06d5e489ba98d7272c76517a3",
+       "model_id": "0b1a7b1f04e84a71983b0ef95d760a64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1304,7 +1306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e926eb3f577e4786ae09b73721390b83",
+       "model_id": "bf7b4eef47e64a819014faa207f8ef2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1318,7 +1320,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e296e9f759a43548fada2901f13690f",
+       "model_id": "5305ac15e4be4549aa56eba643a480d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1332,7 +1334,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "633f4030b5604b65b0f9698fb9e6a09e",
+       "model_id": "8850f2abd42e4cea9cfd791e77c64240",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1346,7 +1348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55f6f5fc5db949c2aa0f30b5678126e9",
+       "model_id": "d5e560fc5976483380cc4ce3cdaf0e45",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1360,7 +1362,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb89e20434a94605a354bcc3779401b3",
+       "model_id": "552c61d70e09490395e4f5f7030f45f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1514,6 +1516,132 @@
    "metadata": {
     "lines_to_next_cell": 2
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
